examples/invalid/program79.c
int main(void) {
    float value;
    int *pointer;
    value = 1.0;
    pointer = &value;
    return *pointer;
}


